archive/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kosmos
  labels:
    name: kosmos
    environment: production
